--- a/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html
@@ -120,6 +120,7 @@
                     <li>accellerando</li>
                     <li>ritardando</li>
                     </ul>
+                    </ul>
                     <li>abbiamo inteso che Zentralklang e Akzidentien formano il corpo centrale, la forma base, e
                     abbiamo quindi 7 forme principali che possono andarsi a costruire:
                     <ol>
@@ -154,12 +155,14 @@
                             chiamati elementi; essi possono essere o un singolo elemento come il Zentralklang oppure un
                             simbolo diverso, o una sovrapposizione dei suoni, qui Stockhausen ci da tutti i 7 tipi di eventi,
                             ognuno di questi tipi è associato a uno degli accordi.
-                            1. Uno dei 7 numeri romani è associato a uno dei 7 tipi di eventi, la differenza da una pagina
-                            all'altra cambia con le pagine di note
-                            2. Sopra alcuni Zentralklang ci sono delle bandierine, che portano scritto "+,-, o un numero"
+                            <ol>
+                            <li>Uno dei 7 numeri romani è associato a uno dei 7 tipi di eventi, la differenza da una pagina
+                            all'altra cambia con le pagine di note</li>
+                            <li>Sopra alcuni Zentralklang ci sono delle bandierine, che portano scritto "+,-, o un numero"
                             che significano che ad ogni successiva ricomparsa dello stesso simbolo, finché non c'è
                             bandierina diversa, allo stesso simbolo può essere tolto o aggiunto un numero di elementi
-                            pari a quelli indicati dal numero.(cuore del pezzo). Esempio:
+                            pari a quelli indicati dal numero.(cuore del pezzo). Esempio:</li>
+                          </ol>
                           </p>
                         </div>
                     </div>
@@ -189,20 +192,21 @@
                                     Se abbiamo un simbolo con +1, la successiva comparsa dello stesso simbolo, possiamo aggiungere
                                     un elemento, che possiamo aggiungere a destra, a sinistra, ed esso può essere un _z Zentralklang
                                     completo, un Akzidentien o complesso dei due.
-                                    6. In caso più Akzidentien si trovino uno dietro l'altro devono essere eseguiti alla massima
+                                    <ol>
+                                    <li>In caso più Akzidentien si trovino uno dietro l'altro devono essere eseguiti alla massima
                                     velocità possibile, ciò comporta che un singolo tipo puó subire delle aumentazioni, e gli si
                                     possono montare elementi aggiuntivi dello stesso tipo, fino a 13 aggiunte, se arriviamo a 13
-                                    si azzera tutto e si torna a 1, ovvero stato iniziale.
-                                    7. Se la partitura ti impone di sottrarre(-), la partitura si complica, poichè devi fare la stessa
+                                    si azzera tutto e si torna a 1, ovvero stato iniziale.</li>
+                                    <li>Se la partitura ti impone di sottrarre(-), la partitura si complica, poichè devi fare la stessa
                                     cosa(ovvero aggiungere), quello che vai a aggiungere è un elemento di pausa dello stesso
-                                    valore di quello che avresti aggiunto se fosse stato un "+". Ciò crea delle strutture di silenzi.
-                                    8. Le strutture di silenzi, devono funzionare come nastri che contengono un suono fantasma.
+                                    valore di quello che avresti aggiunto se fosse stato un "+". Ciò crea delle strutture di silenzi.</li>
+                                    <li>Le strutture di silenzi, devono funzionare come nastri che contengono un suono fantasma.
                                     Dobbiamo quindi aggiungere 2 bande negative (nastri), metafora del sibilo del nastro, silenzi
                                     che sono pure durate che devono essere abitate da uno sfondo, denominata "banda
                                     fantasma". ("Very soft, undefinable"). Cosa succede quando si arriva a -13, l'elemento viene
                                     eliminato, e se lo incontriamo un'altra volta esso non potrà esser suonato. Vi sono casi in cui
                                     un simbolo non ha la possibilità di realizzarsi come aumentazione o diminuzione.
-                                    (altre istruzioni fino a 35)
+                                    (altre istruzioni fino a 35)</li>
                                     <br>
                                     <br>
                                     Le scelte molto diverse danno identità alla singola esecuzione e meccanismo di conservazione del
@@ -220,8 +224,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_02_00_partitura.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_02_02_simboli.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
