--- a/pages/learn.html
+++ b/pages/learn.html
@@ -115,138 +115,97 @@
 </section>
 
   <!-- List-->
-<section data-bs-version="5.1" class="content17 cid-sYzj9koTFS" id="content17-1j">
-    <div class="container">
 
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-10">
-                    <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
-                      
-                        <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
-                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                </a>
-                            </div>
-                            <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
-                                <div class="panel-body">
+  <section data-bs-version="5.1" class="content17 cid-sYzj9koTFS" id="content17-1j">
+      <div class="container">
 
-                                  <!-- Cards Grid-->
-                                  <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
-                                      <div class="container">
-                                          <div class="row mt-4">
-                                              <div class="item features-image сol-12 col-md-6 col-lg-3">
-                                                    <div class="item-wrapper">
-                                                        <div class="item-img">
-                                                            <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="2" data-bs-slide-to="2">
-                                                        </div>
-                                                        <div class="item-content">
-                                                            <h5 class="item-title mbr-fonts-style display-7">
-                                                              <br><strong>Analisi Compositiva</strong></h5>
-                                                        </div>
-                                                        <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
-                                                                &gt;</a></div>
-                                                    </div>
-                                                </div>
+              <div class="row justify-content-center">
+                  <div class="col-12 col-md-10">
+                      <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingOne">
+                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                  <div class="panel-body">
+
+                                    <!-- Cards Grid-->
+                                    <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+                                        <div class="container">
+                                            <div class="row mt-4">
 
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                    </section>
-<!-- end Cards Grid-->
-                            </div>
-                        </div>
-                      </div>
-
-                                              <div class="card mb-3">
-                                              <div class="card-header" role="tab" id="headingtwo">
-                                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_2" aria-expanded="false" aria-controls="collapse1">
-                                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Analysis</strong></h6>
-                                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                                  </a>
-                                              </div>
-                                              <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
-                                                  <div class="panel-body">
-                        <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Composition</strong></h6>
-                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                </a>
-                            </div>
-                            <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">
-
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card mb-3">
-                            <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse3">
-                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
-                                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
-                                </a>
-                            </div>
-                            <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
-                                <div class="panel-body">
-
-                                  <!-- Cards Grid-->
-                                  <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
-                                      <div class="container">
-                                          <div class="row mt-4">
                                               <div class="item features-image сol-12 col-md-6 col-lg-3">
                                                   <div class="item-wrapper">
                                                       <div class="item-img">
-                                                          <img src="https://www.gabrielavelitch.com/img/site/spectrogram.webp" data-slide-to="0" data-bs-slide-to="0">
+                                                          <img src="https://www.gabrielavelitch.com/img/site/spettro.webp" data-slide-to="2" data-bs-slide-to="2">
                                                       </div>
                                                       <div class="item-content">
                                                           <h5 class="item-title mbr-fonts-style display-7">
-                                                            <br><strong>Storia della Musica Elettroacustica</strong></h5>
+                                                            <br><strong>Analisi Compositiva</strong></h5>
                                                       </div>
-                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/storia_elettroacustica.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
                                                               &gt;</a></div>
                                                   </div>
                                               </div>
-                                              <div class="item features-image сol-12 col-md-6 col-lg-3">
-                                                  <div class="item-wrapper">
-                                                      <div class="item-img">
-                                                          <img src="https://www.gabrielavelitch.com/img/site/stockhausen.webp" data-slide-to="1" data-bs-slide-to="1">
-                                                      </div>
-                                                      <div class="item-content">
-                                                          <h5 class="item-title mbr-fonts-style display-7">
-                                                            <br><strong>Il Paradigma di Stockhausen</strong></h5>
-                                                      </div>
-                                                      <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
-                                                              &gt;</a></div>
-                                                    </div>
-                                                </div>
 
-                                            </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                                    </section>
-<!-- end Cards Grid-->
-                                </div>
-                            </div>
-                        </div>
+                                  </div>
+                              </div>
+                          </div>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-</section>
 
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingTwo">
+                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_2" aria-expanded="false" aria-controls="collapse2">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Downloads</strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                  <div class="panel-body">
+                                      <p class="mbr-fonts-style panel-text display-7">
+                                        <strong>
+                                          <br>- <a href="https://cycling74.com/downloads" class="text-primary"><b>MaxMSP (software di sintesi)</b></a>
+                                          <br>- <a href="https://www.audacityteam.org/download/" class="text-primary"><b>Audacity (software di editing)</b></a>
+                                          <br>- <a href="https://www.sonicvisualiser.org/download.html" class="text-primary"><b>Sonic Visualizer (software di analisi)</b></a>
+                                        </strong>
+                                        </p>
+                                  </div>
+                              </div>
+                          </div>
+
+                          <div class="card mb-3">
+                              <div class="card-header" role="tab" id="headingTwo">
+                                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse3">
+                                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Google Drive</strong></h6>
+                                      <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                                  </a>
+                              </div>
+                              <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                  <div class="panel-body">
+                                    <iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#list" style="width:100%; height:100%; border:0;"></iframe>
+                                  </div>
+                              </div>
+                          </div>
+
+
+                      </div>
+                  </div>
+              </div>
+          </div>
+  </section>
+
+<!-- end List-->
 
 <!-- Cards Grid-->
 <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
     <div class="container">
         <div class="row mt-4">
+
+
             <div class="item features-image сol-12 col-md-6 col-lg-3">
                 <div class="item-wrapper">
                     <div class="item-img">
