--- a/pages/learn.html
+++ b/pages/learn.html
@@ -225,13 +225,13 @@
                           </div>
 
                           <div class="card mb-3">
-                              <div class="card-header" role="tab" id="headingTwo">
+                              <div class="card-header" role="tab" id="headingThree">
                                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse2_3" aria-expanded="false" aria-controls="collapse3">
                                       <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History</strong></h6>
                                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                   </a>
                               </div>
-                              <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                              <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                   <div class="panel-body">
                                     <iframe src="https://drive.google.com/embeddedfolderview?id=16CAtLXFsGklV-MHQAJSlw9EKc0sS_Z4B#list" style="width:100%; height:100%; border:0;"></iframe>
                                   </div>
