--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -163,7 +163,7 @@
             Questa retta mi da un'idea di come avviene la decrescita degli RT60. Scopriamo dunque che questi decrescono esponenzialmente.
             <br>
             <br>
-            Tramite l'angolo di questa retta posso ricavarmi RT60.
+            Tramite l'angolo di questa retta posso ricavarmi RT60. Questo procedimento serve per individuare il T10, T20  e T30 che servono ad individuare quando il suono decade di tot dB.
         </div>
       </div>
     </div>
