--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -120,6 +120,8 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Da questo grafico denotiamo i vari tempi di riverberazione. I valori sono stati ottenuti dal campionamento di varie sale da concerto.
+            <br>
+            <br>
           </p>
           <h3>RT60</h3>
           <br>
@@ -183,6 +185,24 @@
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">T10, T20 e T30
             </p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h3>EDT</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Early deacy time, ovvero tempo di riferimento delle prime riflessioni.
+            <br>
+            <br>
+          </p>
         </div>
       </div>
     </div>
