--- a/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
+++ b/pages/learn/acustica_degli_spazi_musicali/04_06_tempo_di_riverberzione_tramite_risposta_all_impulso.html
@@ -167,6 +167,11 @@
             Questa retta mi da un'idea di come avviene la decrescita degli RT60. Scopriamo dunque che questi decrescono esponenzialmente.
             <br>
             <br>
+            Il T60 è uguale e non varia al variare dei punti di misurazione dello spazio. Il T60 ha un senso da una certa dimensione di una sala in poi, poichè in uno spazio piccolo siamo piú in campo di diffusione dei modi naturali. Se sto valutando
+            uno spazio abbastanza grande (sale con uso performativo, sale con una notevolecubatura),
+            e lo misuro in vari punti troverò sempre tempo di riverberazione simile.
+            <br>
+            <br>
             Tramite l'angolo di questa retta posso ricavarmi RT60. Questo procedimento serve per individuare il T10, T20 e T30 che servono ad individuare quando il suono decade di tot dB.
             Questi parametri sono utili, perchè mi danno delle informazioni piú precise, su quanto la curva reale di decadimento sia uniforme o meno.
             Il tasso di diversità tra questi tempi di riverbero ci dice quanto è irregolare e quanto è uniforme all'inizio la risposta all'impulso.
@@ -199,7 +204,52 @@
           <h3>EDT</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
-            Early deacy time, ovvero tempo di riferimento delle prime riflessioni.
+            <b>Early deacy time</b>, ovvero tempo di riferimento delle prime riflessioni.
+            <br>
+            <br>
+            Si calcola tracciando una retta a -10dB fino a quando incontra la curva della risposta all'impulso, ottengo dunque:
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/acustica_degli_spazi_musicali/cumul.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">T10, T20 e T30
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            Se estrapolo il segmento di retta e ne prendo il tempo e lo moltiplico per 6 ottengo l'EDT.
+            <br>
+            <br>
+            L'EDT ricavato da una caduta di 10dB ma viene confrontato con RT60, l'EDT ha lo scopo di capire qual'è l'uniformità tra il profilo di decadimento delle prime riflessioni ed il profilo di decadimento della risposta diffusa.
+            <br>
+            <br>
+            L'EDT mi da l'RT60 stimato sulle prime riflessioni. Chiaramente nella maggior parte dei casi i valori dell'EDT sono inferiori a quelli dell'RT60 e l'entità di questa differenza garantisce un'indicazione della mancanza di
+            diffusione del campo in quel punto.
+            <br>
+            <br>
+            L'EDT cambia molto rispetto al punto in cui prendo la risposta all'impulso, poichè in essa hanno molto piú importanza le prime riflessioni.
+            <br>
+            <br>
+            L'EDT è definito da caratteristiche percettive molto precise ed esso mi da indicazioni su parametri percettivi e sensazioni psicoacustiche.
             <br>
             <br>
           </p>
@@ -229,8 +279,8 @@
 
 
   <section
-    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a
-      href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+    style="display: none !important;background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
+    <a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
     <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">started with</a> Mobirise</p>
 
 
